--- a/picgallery.html
+++ b/picgallery.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="datasite.js"></script>
     <meta charset="UTF-8">
     <title></title>
 </head>
 <body>
-
+<div id="container">
+    <button onclick="clicker()">Click this</button>
+    <img src="pics/picture1.jpeg" width=200 id="picture1" onclick= "clicker()">
+    <p id="test">Watch this change.</p>
+</div>
 </body>
 </html>
