Work on Friday: Added all pictures and click functions

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <div id="chart_div"></div>
         <br>
         <p>As you can see, hard copy revenue in the US peaks in 2008 with 12 billion dollars in revenue! Although, this is also the year Steam becomes very popular. Due to a massive overhaul of the user interface and Steam Store library, users note that Steam is actually easy and fun to use (whereas before, they were displeased with the entire service). A large influx of new users join steam and partake in the digital distribution focused market and as Steam gets more users, less people buy hard copies of video games. Therefore, I can confidently say that the popularity of online distribution platforms like Steam, Origin, Uplay, and GoG.com is the one of the main reasons the revenue in US hard copy sales are plummeting.</p>
+
+        <h4>Steam Products</h4>
+        <a href="picgallery.html"><button>HERE</button></a>
     </div>
 
     <div id="footer">
