--- a/picgallery.html
+++ b/picgallery.html
@@ -9,6 +9,9 @@
 </head>
 <body>
 <div id="container">
+
+    <div id="body">
+        <h1>Click the Images!</h1>
     <table align="center">
         <tr>
             <td><img src="pics/picture1.png" id="picture1" onclick="clicker1()"></td>
@@ -17,15 +20,19 @@
         </tr>
         <tr>
             <td><img src="pics/picture4.jpg" id="picture4" onclick="clicker4()"></td>
-            <td><img src="pics/picture5.jpg" id="picture5" onclick="clicker5()"></td>
+            <td><img src="pics/picture5.png" id="picture5" onclick="clicker5()"></td>
             <td><img src="pics/picture6.jpg" id="picture6" onclick="clicker6()"></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><img src="pics/picture7.png" id="picture7" onclick="clicker7()"></td>
+            <td><img src="pics/picture8.jpg" id="picture8" onclick="clicker8()"></td>
+            <td><img src="pics/picture9.jpg" id="picture9" onclick="clicker9()"></td>
         </tr>
     </table>
+        <div id="picparagraph">
+        <p>As you can see, Valve has become HUGE is the past couple of years. Their successful video game platform Steam has made them the dominant player in the online market and is already considered to be the video game equivalent of Amazon for PC games. Their success has even pushed them to experiment a bit. As you read this text, Valve is researching and developing their own operating system, console, controller, in-home streaming device, and a virtual reality headset! Valve is doing great and I can confidently say that they will be successful in the upcoming years.</p>
+        </div>
+    </div>
 </div>
 </body>
 </html>
