Added descriptions and the functions that changes said descriptions.

--- a/picgallery.html
+++ b/picgallery.html
@@ -10,25 +10,38 @@
 <body>
 <div id="container">
 
-    <div id="body">
-        <h1>Click the Images!</h1>
+    <div id="body" cellpadding="2" cellspacing="2" border="2">
+        <h1>Steam Products</h1>
+        <h3>Click the images to see the products!</h3>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
     <table align="center">
         <tr>
-            <td><img src="pics/picture1.png" id="picture1" onclick="clicker1()"></td>
-            <td><img src="pics/picture2.jpg" id="picture2" onclick="clicker2()"></td>
-            <td><img src="pics/picture3.png" id="picture3" onclick="clicker3()"></td>
+            <td><img src="pics/picture1.png" id="picture1" onclick="clicker1()"><p id="p1">Steam is an Internet-based digital distribution platform developed by Valve Corporation offering digital rights management (DRM), multiplayer, and social networking. Steam provides the user with installation and automatic updating of games on multiple computers, and community features such as friends lists and groups, cloud saving, and in-game voice and chat functionality.</p><button onclick="d1()">Change Description</button></td>
+            <td><img src="pics/picture2.jpg" id="picture2" onclick="clicker2()"><p id="p2">Steam was created by a company called Valve. Valve  is an American video game development and digital distribution company headquartered in Bellevue, Washington, United States. Due to the success of Steam and their peripheral products, Valve has shifted focus more on being a digital distributor rather than a game developing company.</p><button onclick="d2()">Change Description</button></td>
+            <td><img src="pics/picture3.png" id="picture3" onclick="clicker3()"><p id="p3">The main feature of Steam is the Steam Library. This is where users collect the games they have purchased from the online store. Due to Steam's cloud servers, users can play their games from any computer that they use. You could buy a game and play it on your home computer, or on your laptop when you travel.</p><button onclick="d3()">Change Description</button></td>
         </tr>
         <tr>
-            <td><img src="pics/picture4.jpg" id="picture4" onclick="clicker4()"></td>
-            <td><img src="pics/picture5.png" id="picture5" onclick="clicker5()"></td>
-            <td><img src="pics/picture6.jpg" id="picture6" onclick="clicker6()"></td>
+            <td><img src="pics/picture4.jpg" id="picture4" onclick="clicker4()"><p id="p4">Due to the success of Steam, Valve has decided to make peripheral devices. Their first was the Steam Controller, and it has a very unique design. Where most controllers would have joysticks on the left and right sides, the Steam Controller has touchpads on each side. Many users report that it is a very comfortable controller despite it's strange look.</p><button onclick="d4()">Change Description</button></td>
+            <td><img src="pics/picture5.png" id="picture5" onclick="clicker5()"><p id="p5">This is a prototype for Valve's Steam Machine; a computer/console created by Valve that houses their own SteamOS operating system.</p><button onclick="d5()">Change Description</button></td>
+            <td><img src="pics/picture6.jpg" id="picture6" onclick="clicker6()"><p id="p6">With the increasing popularity of in-home streaming, Valve has decided to create their own in-home streaming device called the Steam Link. The Steam Link allows users to stream their games from their computer directly to any TV in the house that the device is hooked up to.</p><button onclick="d6()">Change Description</button></td>
         </tr>
         <tr>
-            <td><img src="pics/picture7.png" id="picture7" onclick="clicker7()"></td>
-            <td><img src="pics/picture8.jpg" id="picture8" onclick="clicker8()"></td>
-            <td><img src="pics/picture9.jpg" id="picture9" onclick="clicker9()"></td>
+            <td><img src="pics/picture7.png" id="picture7" onclick="clicker7()"><p id="p7">Along with Oculus Rift, and Sony's own VR headset, Valve and HTC's Vive will join the VR headset market. VIRTUAL REALITY!</p><button onclick="d7()">Change Description</button></td>
+            <td><img src="pics/picture8.jpg" id="picture8" onclick="clicker8()"><p id="p8">Valve has also partnered with other companies in creating the Steam Machine. Above is an Alienware version of the hardware.</p><button onclick="d8()">Change Description</button></td>
+            <td><img src="pics/picture9.jpg" id="picture9" onclick="clicker9()"><p id="p9">And lastly, SteamOS: Valve's own operating system. It's supposed to be made primarily for gamers, but only time will tell if it will be a proper contender with Microsoft's Windows and Apple's OS.</p><button onclick="d9()">Change Description</button></td>
         </tr>
     </table>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <div id="picparagraph">
         <p>As you can see, Valve has become HUGE is the past couple of years. Their successful video game platform Steam has made them the dominant player in the online market and is already considered to be the video game equivalent of Amazon for PC games. Their success has even pushed them to experiment a bit. As you read this text, Valve is researching and developing their own operating system, console, controller, in-home streaming device, and a virtual reality headset! Valve is doing great and I can confidently say that they will be successful in the upcoming years.</p>
         </div>
